add extraContainers support
# Conflicts:
#	charts/n8n/Chart.yaml

--- a/charts/n8n/values.yaml
+++ b/charts/n8n/values.yaml
@@ -128,7 +128,6 @@ main:
   #      mountPath: /etc/ssl/certs/postgresql
   #      readOnly: true
 
-
   # Number of desired pods. More than one pod is supported in n8n enterprise.
   replicaCount: 1
 
@@ -235,7 +234,6 @@ main:
   #        - name: data
   #          mountPath: /home/node/.n8n
 
-
   service:
     enabled: true
     annotations: {}
@@ -270,6 +268,13 @@ main:
 
   # Pod termination grace period in seconds
   terminationGracePeriodSeconds: 30
+
+  # extraContainers is a list of sidecar containers. Specified as a YAML list.
+  extraContainers: []
+  # extraContainers:
+  #   - name: my-sidecar
+  #     image: busybox:latest
+  #     command: ["sh", "-c", "while true; do echo hello && sleep 60; done"]
 
 # # # # # # # # # # # # # # # #
 #
@@ -459,6 +464,13 @@ worker:
   # Pod termination grace period in seconds
   terminationGracePeriodSeconds: 30
 
+  # extraContainers is a list of sidecar containers. Specified as a YAML list.
+  extraContainers: []
+  # extraContainers:
+  #   - name: my-sidecar
+  #     image: busybox:latest
+  #     command: ["sh", "-c", "while true; do echo hello && sleep 60; done"]
+
 # Webhook related settings
 # With .Values.scaling.webhook.enabled=true you disable Webhooks from the main process, but you enable the processing on a different Webhook instance.
 # See https://github.com/8gears/n8n-helm-chart/issues/39#issuecomment-1579991754 for the full explanation.
@@ -474,7 +486,6 @@ webhook:
   extraEnv: {}
   #   WEBHOOK_URL:
   #     value: "http://webhook.domain.tld"
-
 
   #
   # Webhook Kubernetes specific settings
@@ -646,6 +657,13 @@ webhook:
 
   # Pod termination grace period in seconds
   terminationGracePeriodSeconds: 30
+
+  # extraContainers is a list of sidecar containers. Specified as a YAML list.
+  extraContainers: []
+  # extraContainers:
+  #   - name: my-sidecar
+  #     image: busybox:latest
+  #     command: ["sh", "-c", "while true; do echo hello && sleep 60; done"]
 
 #
 # User defined supplementary K8s manifests
